# lerobot_policy_latent_smolvla

./: .gitignore  README.md  pyproject.toml
src/lerobot_policy_latent_smolvla/: __init__.py  configuration_latent_smolvla.py  loss_utils.py  modeling_latent_smolvla.py  processor_latent_smolvla.py  smolvlm_with_expert_standalone.py
src/lerobot_policy_latent_smolvla.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_latent_smolvla.py
