[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_policy_latent_smolvla"
version = "0.1.0"
description = "Standalone latent SmolVLA policy plugin for LeRobot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "lerobot",
  "torch",
  "transformers",
  "typing_extensions",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
